fix:style:fix words overflow(word-break)

--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -35,6 +35,9 @@ body
 
   @extend $base-style
 
+  article
+    word-break: break-word
+
   p
     hyphens(auto)
 
